Mesh objects with curve modifiers render in thier 'rest' position, not thier 'pose' position #30398

Closed
opened 2012-02-29 12:20:19 +01:00 by Randy Blose · 8 comments
Member

%%%Windows xp, Nvidia 8400gs graphics, blender r44136

In the attached file I have several mesh objects with curve & array modifiers on them. The curves are controlled by an armature via bone hooks.The mesh objects are rendering in their default 'rest' position (the armature's rest position) not the current pose position as seen in the 3d view.

To reproduce, simply render. Additionally I noticed as I tried to remove un-needed data from this file, once I removed all materials, the behavior returned to normal - in that the mesh objects rendered where the curves were positioned, (which makes no sense at all).

Thanks,
Randy
%%%

%%%Windows xp, Nvidia 8400gs graphics, blender r44136 In the attached file I have several mesh objects with curve & array modifiers on them. The curves are controlled by an armature via bone hooks.The mesh objects are rendering in their default 'rest' position (the armature's rest position) not the current pose position as seen in the 3d view. To reproduce, simply render. Additionally I noticed as I tried to remove un-needed data from this file, once I removed all materials, the behavior returned to normal - in that the mesh objects rendered where the curves were positioned, (which makes no sense at all). Thanks, Randy %%%
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

%%%Update - I have been able to reproduce this bug over and over again. As stated above, render with the file with the current frame set anywhere from frame 0 to 44 (no action takes place on those frames). Then as mentioned above, force the removal of all materials (shift clicking on the x in the materials panel by the name of the material and remove fake users) and again render any frame from 0 to 44 and the render is what is seen in the 3d view port. To cause the bug again, follow these steps:

  • Save the file under a new name (bug1.blend for instance)
  • reopen the saved file
  • append from the original file (bug.blend) all the materials
  • goto frame 221
  • assign 'rough chrome' material to all the curves (BackMidTubeCurve & BackOutTubeCurve) & meshes (BackMidTube & BackOutTube) associated with them
  • assign 'iFoam_Body' material to all the meshes that make up the back wall (BackOut & BackMid naming conventions) and set this material to have a fake user
  • set Cup_porcelain material to have a fake user
  • switch the 3d view port to camera view and do an opengl render of the animation
  • after the render finishes, set the current frame anywhere from frame 0 to 44 and render a single image, the bug happens again

I've done this 3 times and the results are the same. All renders are done with blender internal render. Cycles render doesn't display the bug, everything renders normal as it should.

%%%

%%%Update - I have been able to reproduce this bug over and over again. As stated above, render with the file with the current frame set anywhere from frame 0 to 44 (no action takes place on those frames). Then as mentioned above, force the removal of all materials (shift clicking on the x in the materials panel by the name of the material and remove fake users) and again render any frame from 0 to 44 and the render is what is seen in the 3d view port. To cause the bug again, follow these steps: - Save the file under a new name (bug1.blend for instance) - reopen the saved file - append from the original file (bug.blend) all the materials - goto frame 221 - assign 'rough chrome' material to all the curves (BackMidTubeCurve & BackOutTubeCurve) & meshes (BackMidTube & BackOutTube) associated with them - assign 'iFoam_Body' material to all the meshes that make up the back wall (BackOut & BackMid naming conventions) and set this material to have a fake user - set Cup_porcelain material to have a fake user - switch the 3d view port to camera view and do an opengl render of the animation - after the render finishes, set the current frame anywhere from frame 0 to 44 and render a single image, the bug happens again I've done this 3 times and the results are the same. All renders are done with blender internal render. Cycles render doesn't display the bug, everything renders normal as it should. %%%
Member

%%%I've checked this quickly, and the setup has far too many objects, bones, modifiers or materials to easily grasp. Can't help here... maybe someone else?

Better would be if you can check on how to create this from scratch, just 1 bone, 1 curve, 1 array and 1 curve modifier (or so). %%%

%%%I've checked this quickly, and the setup has far too many objects, bones, modifiers or materials to easily grasp. Can't help here... maybe someone else? Better would be if you can check on how to create this from scratch, just 1 bone, 1 curve, 1 array and 1 curve modifier (or so). %%%

%%%In fact, the problem is "simple" – array and curve modifiers use curve's data, i.e. curve as they are before their modifiers are applied.

Problem is, modified curve are no more curves, but meshes… Hence, we have to rewrite completely those codes... :/

Attached a simple blend demonstrating the problem.

IMHO, this can go to TODO ;)%%%

%%%In fact, the problem is "simple" – array and curve modifiers use curve's data, i.e. curve as they are before their modifiers are applied. Problem is, modified curve are no more curves, but meshes… Hence, we have to rewrite completely those codes... :/ Attached a simple blend demonstrating the problem. IMHO, this can go to TODO ;)%%%

%%%Hrrm… I’m a bit stupid here…

It do should work with modifiers like hooks, which modify curve handles themselves :/%%%

%%%Hrrm… I’m a bit stupid here… It do should work with modifiers like hooks, which modify curve handles themselves :/%%%
Author
Member

%%%Ok, apologies for slow response/cluttered example file. I've re-produced the bug with a simple file, see -CurveBug.blend.

To reproduce the bug: F12 to render - everything renders fine. Do an opengl render of the animation. F12 again and everything renders fine. Now, assign the material -iFoam_Metal_rough to the curve object and press F12 again. The curve now renders in it's correct position, but the mesh renders in it's rest position.

Please note: In preparing/experimenting with this new file I tried using simple blue & green materials on the curve & mesh objects and couldn't reproduce the bug. It wasn't until I appended in the iFoam_Metal_rough material and assigned it to the curve object that I was able to reproduce this bug. So again, it appears linked to that material, which doesn't make any sense. Hopefully this new file/details will help.

Thanks
Randy%%%

%%%Ok, apologies for slow response/cluttered example file. I've re-produced the bug with a simple file, see -CurveBug.blend. To reproduce the bug: F12 to render - everything renders fine. Do an opengl render of the animation. F12 again and everything renders fine. Now, assign the material -iFoam_Metal_rough to the curve object and press F12 again. The curve now renders in it's correct position, but the mesh renders in it's rest position. Please note: In preparing/experimenting with this new file I tried using simple blue & green materials on the curve & mesh objects and couldn't reproduce the bug. It wasn't until I appended in the iFoam_Metal_rough material and assigned it to the curve object that I was able to reproduce this bug. So again, it appears linked to that material, which doesn't make any sense. Hopefully this new file/details will help. Thanks Randy%%%

%%%Fixed in svn rev45345. Thanks for the report, closing!%%%

%%%Fixed in svn rev45345. Thanks for the report, closing!%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#30398
No description provided.