Fix #30398: Mesh objects with curve modifiers render in thier 'rest' position, not thier 'pose' position

Do not recalculate curve's path if displist is building for orco -- in this
case modifiers are not applying on curve which makes path be calculated and
later used by dependent objects with it's non-modified state.